[gd_scene load_steps=11 format=3 uid="uid://bm5hy33a0ob88"]

[ext_resource type="PackedScene" uid="uid://bn5s77v3rj75g" path="res://Scenes/Player.tscn" id="1_bobyi"]
[ext_resource type="Script" path="res://Scripts/LevelHandler.gd" id="1_e6c78"]
[ext_resource type="PackedScene" uid="uid://bym46kytxu6ca" path="res://Scenes/Platform.tscn" id="2_erkc7"]
[ext_resource type="PackedScene" uid="uid://d1ygxcitfd4nu" path="res://Scenes/Walls/RedWall.tscn" id="3_4a26e"]
[ext_resource type="PackedScene" uid="uid://cip32ogujaesg" path="res://Scenes/Mobs/Obstacle.tscn" id="4_qklt1"]
[ext_resource type="PackedScene" uid="uid://3ihhivxbefxo" path="res://Scenes/Walls/BlueWall.tscn" id="5_t6imj"]
[ext_resource type="PackedScene" uid="uid://b02qjyix5nv35" path="res://Scenes/Walls/YellowWall.tscn" id="6_qbwd7"]
[ext_resource type="PackedScene" uid="uid://bkw1m0842urtq" path="res://Scenes/Walls/GreenWall.tscn" id="7_3qmib"]
[ext_resource type="PackedScene" uid="uid://dbdbfwww24mmq" path="res://Scenes/Walls/PurpleWall.tscn" id="8_t2226"]
[ext_resource type="PackedScene" uid="uid://ccwfnkbcpmvqh" path="res://Scenes/Exit.tscn" id="10_u6spt"]

[node name="Level4" type="Node2D"]
script = ExtResource("1_e6c78")

[node name="Player" parent="." instance=ExtResource("1_bobyi")]
position = Vector2(60, 500)

[node name="Platform" parent="." instance=ExtResource("2_erkc7")]
position = Vector2(160, 613)

[node name="Platform2" parent="." instance=ExtResource("2_erkc7")]
position = Vector2(1106, 614)

[node name="RedWall" parent="." instance=ExtResource("3_4a26e")]
position = Vector2(519, 498)
rotation = 1.5708

[node name="Obstacle" parent="." instance=ExtResource("4_qklt1")]
position = Vector2(519, 436)
rotation = 1.5708

[node name="Obstacle2" parent="." instance=ExtResource("4_qklt1")]
position = Vector2(592, 122)
rotation = 1.5708

[node name="BlueWall" parent="." instance=ExtResource("5_t6imj")]
position = Vector2(1048, 380)
rotation = 1.5708

[node name="YellowWall" parent="." instance=ExtResource("6_qbwd7")]
position = Vector2(1259, 282)
rotation = 1.5708

[node name="GreenWall" parent="." instance=ExtResource("7_3qmib")]
position = Vector2(587, 185)
rotation = 1.5708

[node name="PurpleWall" parent="." instance=ExtResource("8_t2226")]
position = Vector2(-67, 175)
rotation = 1.5708

[node name="Exit" parent="." instance=ExtResource("10_u6spt")]
position = Vector2(65, 79)

[connection signal="body_entered" from="Obstacle" to="Player" method="_on_obstacle_body_entered"]
[connection signal="body_entered" from="Obstacle2" to="Player" method="_on_obstacle_body_entered"]
[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
